[gd_scene load_steps=16 format=3 uid="uid://5ubmcimyc6ck"]

[ext_resource type="Texture2D" uid="uid://dy56vkfeh8245" path="res://assets/scenes/apartment/room_base_time_1.png" id="1_4n0q8"]
[ext_resource type="Script" path="res://scripts/sceneHomeHandler.gd" id="1_bwsg2"]
[ext_resource type="Texture2D" uid="uid://nypgqvcwp3ls" path="res://assets/sprites/ui/status_bars/energy/energy_level_100.png" id="2_bpdr4"]
[ext_resource type="Texture2D" uid="uid://c7edoshb1f4ya" path="res://assets/sprites/ui/status_bars/stress/stress_level_0.png" id="3_jeapt"]
[ext_resource type="Texture2D" uid="uid://bkw11jqy5yvax" path="res://assets/sprites/ui/status_bars/study/study_level_0.png" id="4_5kesd"]
[ext_resource type="Texture2D" uid="uid://b6c458echisvw" path="res://assets/sprites/ui/status_bars/calendar/day_1.png" id="5_2nqvh"]
[ext_resource type="Texture2D" uid="uid://0vjn7bgujolp" path="res://assets/sprites/ui/status_bars/money/money_ui.png" id="5_i600v"]
[ext_resource type="Texture2D" uid="uid://cmpxf573xnmbm" path="res://assets/sprites/environments/interact_icon.png" id="7_nfmm5"]
[ext_resource type="Texture2D" uid="uid://bfw1vt15xotws" path="res://assets/sprites/environments/map_icon.png" id="8_b3opd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oi0sv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56sqf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lyyhm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5j6pc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1afik"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vuxge"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_bwsg2")

[node name="room" type="Sprite2D" parent="."]
position = Vector2(576.5, 324)
scale = Vector2(1.79844, 1.8)
texture = ExtResource("1_4n0q8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 62.0
color = Color(0, 0, 0, 0.654902)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 62.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="ColorRect/HBoxContainer"]
layout_mode = 2

[node name="energy_level" type="Sprite2D" parent="ColorRect/HBoxContainer/TextureProgressBar"]
position = Vector2(115, 31)
scale = Vector2(1.8, 1.85)
texture = ExtResource("2_bpdr4")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="ColorRect/HBoxContainer"]
layout_mode = 2

[node name="stress_level" type="Sprite2D" parent="ColorRect/HBoxContainer/TextureProgressBar2"]
position = Vector2(365, 31)
scale = Vector2(1.8, 1.85)
texture = ExtResource("3_jeapt")

[node name="TextureProgressBar3" type="TextureProgressBar" parent="ColorRect/HBoxContainer"]
layout_mode = 2

[node name="study_level" type="Sprite2D" parent="ColorRect/HBoxContainer/TextureProgressBar3"]
position = Vector2(620, 31)
scale = Vector2(1.8, 1.85)
texture = ExtResource("4_5kesd")

[node name="TextureProgressBar4" type="TextureProgressBar" parent="ColorRect/HBoxContainer"]
layout_mode = 2

[node name="money_ui" type="Sprite2D" parent="ColorRect/HBoxContainer/TextureProgressBar4"]
position = Vector2(860, 31)
scale = Vector2(1.8, 1.19329)
texture = ExtResource("5_i600v")

[node name="TextureProgressBar5" type="TextureProgressBar" parent="ColorRect/HBoxContainer"]
layout_mode = 2

[node name="day" type="Sprite2D" parent="ColorRect/HBoxContainer/TextureProgressBar5"]
position = Vector2(1104, 31)
scale = Vector2(1.40033, 1.48142)
texture = ExtResource("5_2nqvh")

[node name="BedButton" type="Button" parent="."]
offset_left = 55.0
offset_top = 315.0
offset_right = 294.0
offset_bottom = 519.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_oi0sv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56sqf")

[node name="bed_hover" type="Sprite2D" parent="BedButton"]
position = Vector2(126, 101)
scale = Vector2(1.5625, 1.65625)
texture = ExtResource("7_nfmm5")

[node name="StudyButton" type="Button" parent="."]
offset_left = 337.0
offset_top = 229.0
offset_right = 652.0
offset_bottom = 547.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_lyyhm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5j6pc")

[node name="study_hover" type="Sprite2D" parent="StudyButton"]
position = Vector2(156, 147)
scale = Vector2(1.5625, 1.65625)
texture = ExtResource("7_nfmm5")

[node name="DoorButton" type="Button" parent="."]
offset_left = 1009.0
offset_top = 62.0
offset_right = 1152.0
offset_bottom = 555.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_1afik")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vuxge")

[node name="door_hover" type="Sprite2D" parent="DoorButton"]
position = Vector2(92, 222)
scale = Vector2(1.78125, 2.24219)
texture = ExtResource("8_b3opd")

[connection signal="pressed" from="DoorButton" to="." method="_on_door_button_pressed"]
